@@ -92,7 +92,7 @@ Wireshark 网络抓包分析利器
 * [了解常见的HTTP响应状态码快速定位问题](https://zh.wikipedia.org/wiki/HTTP%E7%8A%B6%E6%80%81%E7%A0%81)
 
 * -Xmx 参数指明jvm运行时动态申请的最大堆内存，合理的规划部署机器确保对应的java进程能够用到足够的内存资源，Xmx仅是声明式的参数，而非抢占式的。  
-gc日志永远都是我们排查gc问题最好的工具，所以强烈建议大家在线上配置-XX:+PrintGCDetails -Xloggc:/data/logs/gc.log
+gc日志永远都是我们排查gc问题最好的工具，所以强烈建议大家在线上配置-XX:+PrintGCDetails -Xloggc:/data/logs/gc.log -verbose:gc -XX:+PrintGCDateStamps
 
 * [JAVA 常见问题排查方法](https://github.com/fujohnwang/wonderful-slides/blob/master/Java%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5%5B%E6%AF%95%E7%8E%84%5D1397440786.pdf)
 
@@ -140,6 +140,19 @@ Tomcat 进阶 https://www.ntu.edu.sg/home/ehchua/programming/howto/Tomcat_More.h
 * [Isolaion 隔离性](https://en.wikipedia.org/wiki/Isolation_(database_systems))
 
 * JAVA 中数值对象都是有符号的，因此建议所有MySQL字段都声明为有符号的，特别是BigInt类型的数据库字段，否则会出现BigInt会无法映射到long类型而抛异常。
+
+* 查看数据库实时锁情况
+```
+SELECT * FROM INFORMATION_SCHEMA.INNODB_LOCKS;
+SELECT * FROM INFORMATION_SCHEMA.INNODB_LOCK_WAITS;
+```
+
+
+### 大数据相关
+
+* Hive
+
+* Flink
 
 ## 前端开发
 * [JS 秘密花园](http://bonsaiden.github.io/JavaScript-Garden/zh/#object.forinloop)
